// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CxCardText customize 1`] = `
<div>
  <h3
    class="card-body bazinga"
  >
    Test
  </h3>
</div>
`;

exports[`loads and displays CxCardText component 1`] = `
<div>
  <p
    class="card-body"
  >
    Test
  </p>
</div>
`;
